--- a/.github/workflows/verify-issue.yml
+++ b/.github/workflows/verify-issue.yml
@@ -63,6 +63,7 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 state: "open",
+                labels: ["S-needs-triage"],
               })
               await github.rest.issues.createComment({
                 issue_number: context.issue.number,
