--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.9
-loader_version=0.14.21
-fabric_version=0.85.0+1.20.1
+minecraft_version=23w35a
+yarn_mappings=23w35a+build.3
+loader_version=0.14.22
+fabric_version=0.87.1+1.20.2
 
 # Mod Properties
 mod_version=0.5.2
