Add Fabric BlockView API v2 support
- Modify BiomeSlice to store and use RegistryEntry<Biome> instead of Biome
- Rename "block entity attachment" to "block entity render data" to match terminology of BlockView API v2

--- a/build.gradle
+++ b/build.gradle
@@ -82,8 +82,12 @@ dependencies {
 
     // Fabric API
     modIncludeImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
+    modIncludeImplementation(fabricApi.module("fabric-block-view-api-v2", project.fabric_version))
     modIncludeImplementation(fabricApi.module("fabric-rendering-fluids-v1", project.fabric_version))
-    modIncludeImplementation(fabricApi.module("fabric-rendering-data-attachment-v1", project.fabric_version))
+    // `fabricApi.module` does not work with deprecated modules, so add the module dependency manually.
+    // This is planned to be fixed in Loom 1.4.
+    // modIncludeImplementation(fabricApi.module("fabric-rendering-data-attachment-v1", project.fabric_version))
+    modIncludeImplementation("net.fabricmc.fabric-api:fabric-rendering-data-attachment-v1:0.3.36+92a0d36777")
     modIncludeImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
 }
 
