--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.20.2-pre1
-yarn_mappings=1.20.2-pre1+build.3
+minecraft_version=1.20.2-rc1
+yarn_mappings=1.20.2-rc1+build.2
 loader_version=0.14.22
-fabric_version=0.88.2+1.20.2
+fabric_version=0.88.5+1.20.2
 
 # Mod Properties
 mod_version=0.5.2
