--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.20.2-rc2
-yarn_mappings=1.20.2-rc2+build.4
+minecraft_version=1.20.2
+yarn_mappings=1.20.2+build.1
 loader_version=0.14.22
 fabric_version=0.89.0+1.20.2
 
