--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.1
+minecraft_version=23w40a
+yarn_mappings=23w40a+build.6
 loader_version=0.14.22
-fabric_version=0.89.0+1.20.2
+fabric_version=0.89.4+1.20.3
 
 # Mod Properties
 mod_version=0.5.3
