--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: >- 
-        This form is for requesting new features or improvements, and should not be used to report bugs and crashes.
+        This form is for requesting new features or improvements, and should not be used for bug reports or other issues.
   - type: markdown
     attributes:
       value: >- 
