--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -9,7 +9,7 @@ body:
         **Note: This issue tracker is not intended for support requests!** If you need help with crashes or other issues, then
         you should [ask on our Discord server](https://caffeinemc.net/discord) instead. Unless you are certain that you
         have found a defect, and you are able to point to where the problem is, you should not open an issue.
-        
+        <br>
         Additionally, please make sure you have done the following:
         
         - **Have you ensured that all of your mods (including Sodium) are up-to-date?** The latest version of Sodium
@@ -51,7 +51,7 @@ body:
     attributes:
       label: Log File
       description: >-
-        You can usually find the log files within the folder `.minecraft/logs`. Most often, you will want the `latest.log`
+        **Hint:** You can usually find the log files within the folder `.minecraft/logs`. Most often, you will want the `latest.log`
         file, since that file belongs to the last played session of the game.
       placeholder: >-
         Drag-and-drop the log file here (as a file.) Please do not copy the contents of the log file into this area, or
@@ -67,7 +67,7 @@ body:
         file contains important information about your hardware and software configuration. You can generate a crash report
         manually by loading the game to the main menu, and holding the F3+C keys together for approximately 10 seconds.
         
-        You can usually find crash reports (with their date and time) in the folder `.minecraft/crash-reports`.
+        **Hint:** You can usually find crash reports (with their date and time) in the folder `.minecraft/crash-reports`.
       placeholder: >-
         Drag-and-drop the crash report here (as a file.) Please do not copy the contents of the log file into this area, or
         otherwise use a third-party service to upload the file.
