Hardened Gradle builds with Gradle dependency verification and defined module restrictions on third-party maven repositories.
This prevents anyone from replacing dependencies from under our feet for any purpose, either with malicious intent or by accident.

See the Gradle documentation for more information:
https://docs.gradle.org/current/userguide/dependency_verification.html

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'temurin'
           java-version: 17
       - name: Build artifacts
-        run: ./gradlew build -Pbuild.release=true
+        run: ./gradlew --dependency-verification strict build -Pbuild.release=true
       - name: Upload assets to GitHub
         uses: AButler/upload-release-assets@v2.0
         with:
