--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
 
+# Prevent gradle from auto downloading another JDK.
+org.gradle.java.installations.auto-download=false
+
+# Use lenient dependency verification by default for development purposes,
+#  porting to newer game versions can be harder without this.
+org.gradle.dependency.verification=lenient
+
+# Loom Properties
+systemProp.loom.test.reproducible=true
+
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.20.2
