--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -32,7 +32,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-snapshot-
       - name: Build artifacts
-        run: ./gradlew build
+        run: ./gradlew --dependency-verification strict build
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
