--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=23w44a
-yarn_mappings=23w44a+build.5
+minecraft_version=1.20.3-pre2
+yarn_mappings=1.20.3-pre2+build.2
 loader_version=0.14.24
-fabric_version=0.90.7+1.20.3
+fabric_version=0.90.12+1.20.3
 
 # Mod Properties
 mod_version=0.5.3
