--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.20.3-pre2
-yarn_mappings=1.20.3-pre2+build.2
-loader_version=0.14.24
-fabric_version=0.90.12+1.20.3
+minecraft_version=1.20.3
+yarn_mappings=1.20.3+build.1
+loader_version=0.15.0
+fabric_version=0.91.1+1.20.3
 
 # Mod Properties
 mod_version=0.5.4
