Split license files into GPL and LGPL parts
Per GNU's recommendations, the LICENSE.txt file is now
COPYING and COPYING.LESSER. The terms in COPYING.LESSER
supplement the terms of COPYING.

This does not change anything about the project's actual
licensing terms. It just ensures that people have the
complete license texts, and that GitHub can correctly
detect the project's license files.

--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -9,5 +9,6 @@ tasks.withType(JavaCompile) {
 }
 
 jar {
-    from "${rootProject.projectDir}/LICENSE.txt"
+    from "${rootProject.projectDir}/COPYING"
+    from "${rootProject.projectDir}/COPYING.LESSER"
 }
