--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ fabric_version=0.91.1+1.20.3
 mod_version=0.5.5
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
+main_class=net.caffeinemc.mods.sodium.launch_warn.LaunchWarn
