--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_version=0.15.6
 fabric_version=0.91.0+1.20.1
 
 # Mod Properties
-mod_version=0.5.6-rc.3
+mod_version=0.5.6
 maven_group=me.jellysquid.mods
 archives_base_name=sodium-fabric
 main_class=net.caffeinemc.mods.sodium.desktop.LaunchWarn
