Fix buildscript oversights

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G -Djavax.net.ssl.keyStore="/Library/Java/JavaVirtualMachines/temurin-21.jdk/Contents/Home/lib/security/cacerts" -Djavax.net.ssl.keyStoreType=KeychainStore -Djavax.net.ssl.keyStorePassword=changeit
+org.gradle.jvmargs=-Xmx2G
