--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
 loaderVersion = "*"
-license = "LGPL-3.0-only"
+license = "Polyform-Shield-1.0"
 
 [[mods]]
 modId = "sodium"
