--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,6 +13,7 @@ public net.minecraft.world.level.biome.Biome$ClimateSettings
 public net.minecraft.client.renderer.SectionBufferBuilderPool <init>(Ljava/util/List;)V
 
 public com.mojang.blaze3d.vertex.PoseStack$Pose <init>(Lorg/joml/Matrix4f;Lorg/joml/Matrix3f;)V
+public com.mojang.blaze3d.vertex.PoseStack$Pose trustedNormals # trustedNormals
 
 public net.minecraft.world.level.GrassColor pixels
 public net.minecraft.world.level.FoliageColor pixels
