Make the issue template more obnoxious

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,9 @@ body:
   - type: markdown
     attributes:
       value: >-
-        **Note: This issue tracker is not intended for support requests!** If you need help with crashes or other issues, then
+        # READ THIS BEFORE YOU POST AN ISSUE!
+        
+        **This issue tracker is not intended for support requests!** If you need help with crashes or other issues, then
         you should [ask on our Discord server](https://caffeinemc.net/discord) instead. Unless you are certain that you
         have found a defect, and you are able to point to where the problem is, you should not open an issue.
         <br><br>
