--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -15,6 +15,6 @@ public net.minecraft.client.renderer.SectionBufferBuilderPool <init>(Ljava/util/
 public com.mojang.blaze3d.vertex.PoseStack$Pose <init>(Lorg/joml/Matrix4f;Lorg/joml/Matrix3f;)V
 public com.mojang.blaze3d.vertex.PoseStack$Pose trustedNormals # trustedNormals
 
-public net.minecraft.world.level.GrassColor pixels
-public net.minecraft.world.level.FoliageColor pixels
-public net.minecraft.client.renderer.FogRenderer getPriorityFogFunction(Lnet/minecraft/world/entity/Entity;F)Lnet/minecraft/client/renderer/FogRenderer$MobEffectFogFunction;
+public net.minecraft.world.level.GrassColor f_46413_
+public net.minecraft.world.level.FoliageColor f_46104_
+public net.minecraft.client.renderer.FogRenderer m_234165_(Lnet/minecraft/world/entity/Entity;F)Lnet/minecraft/client/renderer/FogRenderer$MobEffectFogFunction;
