--- a/.github/workflows/build-tag.yml
+++ b/.github/workflows/build-tag.yml
@@ -19,23 +19,19 @@ jobs:
         id: ref
       - name: Checkout sources
         uses: actions/checkout@v3
-      - name: Set up JDK
-        uses: actions/setup-java@v2
+      - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: 21
-      - name: Initialize caches
-        uses: actions/cache@v3
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/loom-cache
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-build-tag-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-build-tag-
-      - name: Build artifacts
+          cache-read-only: true
+
+      - name: Execute Gradle build
         run: ./gradlew build -Pbuild.release=true
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
